--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run a one-line script before
-        run: node -v
+        run: node -v || true
 
       - uses: actions/setup-node@v2
         with:
